fix(runtime): PROXY_SAFE lmdb (no --add-opens needed) + GLSL 430 shaders (GL 3.3 context compatibility)